@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/mod_php/mod_php-4.3.2.ebuild,v 1.11 2004/01/08 04:11:46 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php/mod_php/mod_php-4.3.2.ebuild,v 1.12 2004/01/08 06:33:45 robbat2 Exp $
 
 use apache2 && PHPSAPI="apache2" || PHPSAPI="apache1"
 inherit php eutils
@@ -8,7 +8,7 @@ inherit php eutils
 IUSE="${IUSE} apache2"
 
 DESCRIPTION="Apache module for PHP"
-KEYWORDS="x86 sparc ppc alpha hppa ~arm"
+KEYWORDS="x86 sparc ppc alpha hppa"
 SLOT="0"
 EXCLUDE_DB4_FIX=1
 EXCLUDE_PEAR_FIX=1
