@@ -1,6 +1,15 @@
 # ChangeLog for dev-php/mod_php
-# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/mod_php/ChangeLog,v 1.114 2004/01/08 04:11:46 robbat2 Exp $
+# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-php/mod_php/ChangeLog,v 1.115 2004/01/08 06:33:45 robbat2 Exp $
+
+*mod_php-4.3.4-r2 (07 Jan 2004)
+
+  07 Jan 2004; Robin H. Johnson <robbat2@gentoo.org> mod_php-4.3.2-r1.ebuild,
+  mod_php-4.3.2-r2.ebuild, mod_php-4.3.2-r3.ebuild, mod_php-4.3.2-r4.ebuild,
+  mod_php-4.3.2-r5.ebuild, mod_php-4.3.2.ebuild, mod_php-4.3.3-r1.ebuild,
+  mod_php-4.3.3-r2.ebuild, mod_php-4.3.3-r3.ebuild, mod_php-4.3.3.ebuild,
+  mod_php-4.3.4-r1.ebuild, mod_php-4.3.4-r2.ebuild, mod_php-4.3.4.ebuild:
+  remove ~mips and ~arm KEYWORDS due to lack of support, ready for new repoman.
 
   07 Jan 2004; Robin H. Johnson <robbat2@gentoo.org> mod_php-4.3.2-r1.ebuild,
   mod_php-4.3.2-r2.ebuild, mod_php-4.3.2-r3.ebuild, mod_php-4.3.2-r4.ebuild,
